[package]
name = "bellman-keccak256"
version = "0.1.0"
authors = ["Zatoichi Labs <admin@zatoichi-labs.com>"]
edition = "2018"

[dependencies]
ff = "0.5.2"

[dependencies.bellman]
default-features = false
version ="0.2.0"

[dev-dependencies]
bitvec = "0.17.4"
libsecp256k1 = "0.3.5"
pairing = "0.15.0"
proptest = "0.9.6"
tiny-keccak = { version = "2.0", features = ["keccak","sha3"] }
hex = "0.4.0"
